--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "react-transition-group": "^4.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2"
   },
