--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^7.1.2",
     "firebase": "^7.12.0",
     "gh-pages": "^2.2.0",
+    "hash-source": "^1.0.5",
     "node-sass": "^4.13.1",
     "reach-router": "^0.0.0",
     "react": "^16.13.1",
