--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "firebase": "^7.12.0",
+    "firebase-tools": "^7.16.2",
     "gh-pages": "^2.2.0",
     "hash-source": "^1.0.5",
     "node-sass": "^4.13.1",
