--- a/package.json
+++ b/package.json
@@ -16,12 +16,18 @@
     "gh-pages": "^2.2.0",
     "hash-source": "^1.0.5",
     "node-sass": "^4.13.1",
+    "prop-types": "^15.7.2",
     "reach-router": "^0.0.0",
     "react": "^16.13.1",
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^5.1.1",
+    "react-redux-firebase": "2.2.4",
     "react-scripts": "3.4.1",
     "react-transition-group": "^4.3.0",
+    "redux": "^4.0.5",
+    "redux-firestore": "^0.13.0",
+    "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2"
   },
